--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
- <!--  <link rel="shorcut icon" href=""> -->
+  <!--  <link rel="shorcut icon" href=""> -->
   <title>Co-Working Maket</title>
 </head>
 
 <body>
   <div class="wrapper">
-<!-- HEADER -->
+    <!-- HEADER -->
     <div class="header">
       <div class="header__top">
         <div class="header__top-logo">
@@ -27,46 +27,109 @@
         <img src="img/banner.png" alt="">
       </div>
     </div>
-<!-- CONTAINER -->
+    <!-- CONTAINER -->
     <div clagss="container">
-      <div class="container__menu"></div>
-      <div class="container__features">
+      <div class="container__menu">    <!-- MENU HERE -->
+        <ul>
+          <li class="container__menu-item menu__item_black">
+            <img src="img/menu/main-icon.png" alt="menu icon">
+            <a href="#">ГЛАВНАЯ</a>
+          </li>
+          <li class="container__menu-item">
+            <img src="img/menu/feed-icon.png" alt="menu feed">
+            <a href="#">ОТЗЫВЫ</a>
+          </li>
+          <li class="container__menu-item">
+            <img src="img/menu/wallet-icon.png" alt="menu wallet">
+            <a href="#">ТАРИФЫ</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="container__features"> <!-- ОСОБЕННОСТИ -->
         <h1>Особенности</h1>
-      <!-- NEWS -->
+        <ul>
+          <li class="features__item"> <!-- ПЕРВЫЙ ИТЕМ -->
+            <div class="features__item-pic">
+              <img src="img/features/flower.png" alt="">
+            </div>
+            <div class="features__item-text">
+              <p class="features__item-text-topic">УНИКАЛЬНОСТЬ</p>
+              <ul class="features__item-text-list">Создан для вашего комфортного отдыха
+                <li>Кофе/чай</li>
+                <li>Шкаф (5кг)</li>
+                <li>Рабочее место</li>
+              </ul>
+            </div>
+          </li>
+          <li class="features__item"><!--  ВТОРОЙ ИТЕМ -->
+            <div class="features__item-pic">
+              <img src="img/features/mark-as-favorite-star.png" alt="">
+            </div>
+            <div class="features__item-text">
+              <p class="features__item-text-topic">ПРЕМИУМ-КЛАСС</p>
+              <ul class="features__item-text-list">Для любителей хорших впечатлений
+                <li>Обед+кофе</li>
+                <li>Шкаф(10кг)</li>
+                <li>Детское кресло</li>
+              </ul>
+            </div>
+          </li>
+          <li class="features__item"> <!-- ТРЕТИЙ ИТЕМ -->
+            <div class="features__item-pic">
+              <img src="img/features/painter-palette.png" alt="">
+            </div>
+            <div class="features__item-text">
+              <p class="features__item-text-topic">ЛАКШЕРИ-СТУЛЬЯ</p>
+              <ul class="features__item-text-list">Всё самое лучшее и незабываемое
+                <li>Джакузи</li>
+                <li>Шкаф (15кг)</li>
+                <li>Табуретка</li>
+              </ul>
+            </div>
+          </li>
+               <!-- НОВОСТИ -->
+        </ul>
       </div>
       <div class="container__news">
         <h1>Последние новости</h1>
         <ul class="news__list">
           <li class="news__item">
             <div class="news__img">
-              <img src="" alt="">
+              <img src="img/news_pic/layer-6.png" alt="">
             </div>
             <div class="news__content">
               <div class="date">12.10.2016</div>
               <h3>Черная дыра скидок</h3>
-              <p>Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате 24/7. Используйте шкаф для хранения личных вещей. </p>
+              <p>Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах
+                от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате
+                24/7. Используйте шкаф для хранения личных вещей. </p>
             </div>
           </li>
           <li class="news__item">
-              <div class="news__img">
-                <img src="" alt="">
-              </div>
-              <div class="news__content">
-                <div class="date">01.02.2016</div>
-                <h3>Заражай друзей, получай призы!</h3>
-                <p>Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или менторами для резидентов. </p>
-              </div>
-            </li>
-            <li class="news__item">
-                <div class="news__img">
-                  <img src="" alt="">
-                </div>
-                <div class="news__content">
-                  <div class="date">22.12.2015</div>
-                  <h3>Новое рабочее место для бизнесменов.</h3>
-                  <p>Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой, чайником, кофе машиной, посудой.</p>
-                </div>
-              </li>
+            <div class="news__img">
+              <img src="img/news_pic/layer-7.png" alt="">
+            </div>
+            <div class="news__content">
+              <div class="date">01.02.2016</div>
+              <h3>Заражай друзей, получай призы!</h3>
+              <p>Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на
+                новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или
+                менторами для резидентов. </p>
+            </div>
+          </li>
+          <li class="news__item">
+            <div class="news__img">
+              <img src="img/news_pic/layer-9.png" alt="">
+            </div>
+            <div class="news__content">
+              <div class="date">22.12.2015</div>
+              <h3>Новое рабочее место для бизнесменов.</h3>
+              <p>Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную
+                зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой,
+                чайником, кофе машиной, посудой.</p>
+            </div>
+          </li>
         </ul>
       </div>
       <div class="container__pages"></div>
