--- a/index.html
+++ b/index.html
@@ -132,7 +132,20 @@
           </li>
         </ul>
       </div>
-      <div class="container__pages"></div>
+      <div class="container__pages">
+        <ul>
+          <li class="container__pages__item">Страница 1 из 7</li>
+          <li class="container__pages__item"><img src="img/vector-smart-object.png" alt=""></li>
+          <li class="container__pages__item">1</li>
+          <li class="container__pages__item">2</li>
+          <li class="container__pages__item">3</li>
+          <li class="container__pages__item">4</li>
+          <li class="container__pages__item">5</li>
+          <li class="container__pages__item">6</li>
+          <li class="container__pages__item">7</li>
+          <li class="container__pages__item"><img src="img/vector-smart-object2.png" alt=""></li>
+        </ul>
+      </div>
     </div>
     <!-- FOOTER -->
     <div class="footer">
@@ -145,11 +158,21 @@
       <div class="footer__social">
         <p>Наши социальные сети</p>
         <ul>
-          <li class="social__logo"></li>
-          <li class="social__logo"></li>
-          <li class="social__logo"></li>
-          <li class="social__logo"></li>
-          <li class="social__logo"></li>
+          <li class="footer__social__logo">
+            <img src="img/social/vk.png" alt="vk">
+          </li>
+          <li class="footer__social__logo">
+            <img src="img/social/fb.png" alt="facebook">
+          </li>
+          <li class="footer__social__logo">
+            <img src="img/social/google.png" alt="google">
+          </li>
+          <li class="footer__social__logo">
+            <img src="img/social/twitter.png" alt="twitter">
+          </li>
+          <li class="footer__social__logo">
+            <img src="img/social/mail.png" alt="facebook">
+          </li>
         </ul>
       </div>
     </div>
