--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="wrapper">
-    <!-- HEADER -->
+              <!-- HEADER -->
     <div class="header">
       <div class="header__top">
         <div class="header__top-logo">
@@ -27,7 +27,7 @@
         <img src="img/banner.png" alt="">
       </div>
     </div>
-    <!-- CONTAINER -->
+              <!-- CONTAINER -->
     <div clagss="container">
       <div class="container__menu">    <!-- MENU HERE -->
         <ul>
@@ -46,10 +46,10 @@
         </ul>
       </div>
 
-      <div class="container__features"> <!-- ОСОБЕННОСТИ -->
+      <div class="container__features"> <!-- FEATURES -->
         <h1>Особенности</h1>
         <ul>
-          <li class="features__item"> <!-- ПЕРВЫЙ ИТЕМ -->
+          <li class="features__item"> <!-- FIRST ITEM -->
             <div class="features__item-pic">
               <img src="img/features/flower.png" alt="">
             </div>
@@ -62,7 +62,7 @@
               </ul>
             </div>
           </li>
-          <li class="features__item"><!--  ВТОРОЙ ИТЕМ -->
+          <li class="features__item"><!--  SECOND ITEM -->
             <div class="features__item-pic">
               <img src="img/features/mark-as-favorite-star.png" alt="">
             </div>
@@ -75,7 +75,7 @@
               </ul>
             </div>
           </li>
-          <li class="features__item"> <!-- ТРЕТИЙ ИТЕМ -->
+          <li class="features__item"> <!-- THIRD ITEM -->
             <div class="features__item-pic">
               <img src="img/features/painter-palette.png" alt="">
             </div>
@@ -88,12 +88,12 @@
               </ul>
             </div>
           </li>
-               <!-- НОВОСТИ -->
+               <!-- NEWS BLOCK -->
         </ul>
       </div>
       <div class="container__news">
         <h1>Последние новости</h1>
-        <ul class="news__list">
+        <ul class="news__list"> <!-- FIRST ITEM -->
           <li class="news__item">
             <div class="news__img">
               <img src="img/news_pic/layer-6.png" alt="">
@@ -106,7 +106,7 @@
                 24/7. Используйте шкаф для хранения личных вещей. </p>
             </div>
           </li>
-          <li class="news__item">
+          <li class="news__item"> <!-- SECOND ITEM -->
             <div class="news__img">
               <img src="img/news_pic/layer-7.png" alt="">
             </div>
@@ -118,7 +118,7 @@
                 менторами для резидентов. </p>
             </div>
           </li>
-          <li class="news__item">
+          <li class="news__item"> <!-- THIRD ITEM -->
             <div class="news__img">
               <img src="img/news_pic/layer-9.png" alt="">
             </div>
@@ -132,22 +132,22 @@
           </li>
         </ul>
       </div>
-      <div class="container__pages">
+      <div class="container__pages"> <!--CHOOSE PAGES -->
         <ul>
           <li class="container__pages__item">Страница 1 из 7</li>
-          <li class="container__pages__item"><img src="img/vector-smart-object.png" alt=""></li>
-          <li class="container__pages__item">1</li>
-          <li class="container__pages__item">2</li>
-          <li class="container__pages__item">3</li>
-          <li class="container__pages__item">4</li>
-          <li class="container__pages__item">5</li>
-          <li class="container__pages__item">6</li>
-          <li class="container__pages__item">7</li>
-          <li class="container__pages__item"><img src="img/vector-smart-object2.png" alt=""></li>
+          <li class="container__pages__item"><a href="#"><img src="img/vector-smart-object.png" alt=""></a></li>
+          <li class="container__pages__item"><a href="#">1</a></li>
+          <li class="container__pages__item"><a href="#">2</a></li>
+          <li class="container__pages__item"><a href="#">3</a></li>
+          <li class="container__pages__item"><a href="#">4</a></li>
+          <li class="container__pages__item"><a href="#">5</a></li>
+          <li class="container__pages__item"><a href="#">6</a></li>
+          <li class="container__pages__item"><a href="#">7</a></li>
+          <li class="container__pages__item"><a href=""><img src="img/vector-smart-object2.png" alt=""></a></li>
         </ul>
       </div>
     </div>
-    <!-- FOOTER -->
+                      <!-- FOOTER -->
     <div class="footer">
       <div class="footer__text">
         <p>Сделано с любовью и старанием на курсе «HTML + CSS» в LoftSchool. Автор работы: Казаков Роман</p>
