--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <!--  <link rel="shorcut icon" href=""> -->
-  <title>Co-Working Maket</title>
+  <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png">
+  <title>Coworking</title>
 </head>
 
 <body>
