--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./fonts/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
   <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png">
   <title>Coworking</title>
@@ -19,8 +21,8 @@
           <img src="img/logo-fig.png" alt="">
         </div>
         <div class="header__top-info">
-          <p>8(800)00-392-10</p>
-          <a href="#">График работы</a>
+          <p class="number">8(800)00-392-10</p>
+          <a href="#" class="schedule_dropped">График работы</a>
         </div>
       </div>
       <div class="header__main-pic">
@@ -48,14 +50,14 @@
 
       <div class="container__features"> <!-- FEATURES -->
         <h1>Особенности</h1>
-        <ul>
+        <ul class="features">
           <li class="features__item"> <!-- FIRST ITEM -->
-            <div class="features__item-pic">
+            <div class="features__pic">
               <img src="img/features/flower.png" alt="">
             </div>
-            <div class="features__item-text">
-              <p class="features__item-text-topic">УНИКАЛЬНОСТЬ</p>
-              <ul class="features__item-text-list">Создан для вашего комфортного отдыха
+            <div class="features__text">
+              <p class="features__text-topic">УНИКАЛЬНОСТЬ</p>
+             <ul class="features__text-list">Создан для вашего комфортного отдыха
                 <li>Кофе/чай</li>
                 <li>Шкаф (5кг)</li>
                 <li>Рабочее место</li>
@@ -63,12 +65,12 @@
             </div>
           </li>
           <li class="features__item"><!--  SECOND ITEM -->
-            <div class="features__item-pic">
+            <div class="features__pic">
               <img src="img/features/mark-as-favorite-star.png" alt="">
             </div>
-            <div class="features__item-text">
-              <p class="features__item-text-topic">ПРЕМИУМ-КЛАСС</p>
-              <ul class="features__item-text-list">Для любителей хорших впечатлений
+            <div class="features__text">
+              <p class="features__text-topic">ПРЕМИУМ-КЛАСС</p>
+             <ul class="features__text-list">Для любителей хорших впечатлений
                 <li>Обед+кофе</li>
                 <li>Шкаф(10кг)</li>
                 <li>Детское кресло</li>
@@ -76,12 +78,12 @@
             </div>
           </li>
           <li class="features__item"> <!-- THIRD ITEM -->
-            <div class="features__item-pic">
+            <div class="features__pic">
               <img src="img/features/painter-palette.png" alt="">
             </div>
-            <div class="features__item-text">
-              <p class="features__item-text-topic">ЛАКШЕРИ-СТУЛЬЯ</p>
-              <ul class="features__item-text-list">Всё самое лучшее и незабываемое
+            <div class="features__text">
+              <p class="features__text-topic">ЛАКШЕРИ-СТУЛЬЯ</p>
+             <ul class="features__text-list">Всё самое лучшее и незабываемое
                 <li>Джакузи</li>
                 <li>Шкаф (15кг)</li>
                 <li>Табуретка</li>
@@ -99,8 +101,8 @@
               <img src="img/news_pic/layer-6.png" alt="">
             </div>
             <div class="news__content">
-              <div class="date">12.10.2016</div>
-              <h3>Черная дыра скидок</h3>
+              <div>12.10.2016</div>
+              <span>Черная дыра скидок</span>
               <p>Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах
                 от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате
                 24/7. Используйте шкаф для хранения личных вещей. </p>
@@ -111,8 +113,8 @@
               <img src="img/news_pic/layer-7.png" alt="">
             </div>
             <div class="news__content">
-              <div class="date">01.02.2016</div>
-              <h3>Заражай друзей, получай призы!</h3>
+              <div>01.02.2016</div>
+              <span>Заражай друзей, получай призы!</span>
               <p>Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на
                 новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или
                 менторами для резидентов. </p>
@@ -123,8 +125,8 @@
               <img src="img/news_pic/layer-9.png" alt="">
             </div>
             <div class="news__content">
-              <div class="date">22.12.2015</div>
-              <h3>Новое рабочее место для бизнесменов.</h3>
+              <div>22.12.2015</div>
+              <span>Новое рабочее место для бизнесменов.</span>
               <p>Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную
                 зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой,
                 чайником, кофе машиной, посудой.</p>
@@ -134,16 +136,16 @@
       </div>
       <div class="container__pages"> <!--CHOOSE PAGES -->
         <ul>
-          <li class="container__pages__item">Страница 1 из 7</li>
-          <li class="container__pages__item"><a href="#"><img src="img/vector-smart-object.png" alt=""></a></li>
-          <li class="container__pages__item"><a href="#">1</a></li>
-          <li class="container__pages__item"><a href="#">2</a></li>
-          <li class="container__pages__item"><a href="#">3</a></li>
-          <li class="container__pages__item"><a href="#">4</a></li>
-          <li class="container__pages__item"><a href="#">5</a></li>
-          <li class="container__pages__item"><a href="#">6</a></li>
-          <li class="container__pages__item"><a href="#">7</a></li>
-          <li class="container__pages__item"><a href=""><img src="img/vector-smart-object2.png" alt=""></a></li>
+          <li class="container__page">Страница 1 из 7</li>
+          <li class="container__page"><a href="#"><img src="img/vector-smart-object.png" alt=""></a></li>
+          <li class="container__page"><a href="#">1</a></li>
+          <li class="container__page"><a href="#">2</a></li>
+          <li class="container__page"><a href="#">3</a></li>
+          <li class="container__page"><a href="#">4</a></li>
+          <li class="container__page"><a href="#">5</a></li>
+          <li class="container__page"><a href="#">6</a></li>
+          <li class="container__page"><a href="#">7</a></li>
+          <li class="container__page"><a href=""><img src="img/vector-smart-object2.png" alt=""></a></li>
         </ul>
       </div>
     </div>
