--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./fonts/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
   <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png">
   <title>Coworking</title>
@@ -135,24 +136,24 @@
         </ul>
       </div>
       <div class="container__pages"> <!--CHOOSE PAGES -->
-        <ul>
+        <ul class="container__pages-list">
           <li class="container__page">Страница 1 из 7</li>
-          <li class="container__page"><a href="#"><img src="img/vector-smart-object.png" alt=""></a></li>
-          <li class="container__page"><a href="#">1</a></li>
-          <li class="container__page"><a href="#">2</a></li>
-          <li class="container__page"><a href="#">3</a></li>
-          <li class="container__page"><a href="#">4</a></li>
-          <li class="container__page"><a href="#">5</a></li>
-          <li class="container__page"><a href="#">6</a></li>
-          <li class="container__page"><a href="#">7</a></li>
-          <li class="container__page"><a href=""><img src="img/vector-smart-object2.png" alt=""></a></li>
+          <li class="container__page"><a href="#"><img src="img/left-arrow-light.png" alt=""></a></li>
+          <li class="container__page-num"><a href="#">1</a></li>
+          <li class="container__page-num"><a href="#">2</a></li>
+          <li class="container__page-num"><a href="#">3</a></li>
+          <li class="container__page-num"><a href="#">4</a></li>
+          <li class="container__page-num"><a href="#">5</a></li>
+          <li class="container__page-num"><a href="#">6</a></li>
+          <li class="container__page-num"><a href="#">7</a></li>
+          <li class="container__page"><a href=""><img src="img/right-arrow.png" alt=""></a></li>
         </ul>
       </div>
     </div>
                       <!-- FOOTER -->
     <div class="footer">
       <div class="footer__text">
-        <p>Сделано с любовью и старанием на курсе «HTML + CSS» в LoftSchool. Автор работы: Казаков Роман</p>
+        <p>Сделано с любовью и старанием на курсе «HTML + CSS» в <b>LoftSchool.</b> Автор работы: <b>Казаков Роман</b></p>
       </div>
       <div class="footer__logo">
         <img src="img/logo-fig.png" alt="">
