--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
-  <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png">
+  <!-- <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png"> -->
   <title>Coworking</title>
 </head>
 
@@ -22,7 +22,7 @@
           <img src="img/logo-fig.png" alt="">
         </div>
         <div class="header__top-info">
-          <p class="number">8(800)00-392-10</p>
+          <a href="#" class="number">8(800)00-392-10</a>
           <a href="#" class="schedule_dropped">График работы</a>
         </div>
       </div>
@@ -31,9 +31,9 @@
       </div>
     </div>
               <!-- CONTAINER -->
-    <div clagss="container">
+    <div class="container">
       <div class="container__menu">    <!-- MENU HERE -->
-        <ul>
+        <ul class="container__menu-list">
           <li class="container__menu-item menu__item_black">
             <img src="img/menu/main-icon.png" alt="menu icon">
             <a href="#">ГЛАВНАЯ</a>
