--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
         <p>Наши социальные сети</p>
         <ul>
           <li class="footer__social__logo">
-            <img src="img/social/vk.png" alt="vk">
+            <a href="#"><img src="img/social/vk.png" alt="vk"></a>
           </li>
           <li class="footer__social__logo">
-            <img src="img/social/fb.png" alt="facebook">
+            <a href="#"><img src="img/social/fb.png" alt="facebook"></a>
           </li>
           <li class="footer__social__logo">
-            <img src="img/social/google.png" alt="google">
+            <a href="#"><img src="img/social/google.png" alt="google"></a>
           </li>
           <li class="footer__social__logo">
-            <img src="img/social/twitter.png" alt="twitter">
+            <a href="#"><img src="img/social/twitter.png" alt="twitter"></a>
           </li>
           <li class="footer__social__logo">
-            <img src="img/social/mail.png" alt="facebook">
+            <a href="#"><img src="img/social/mail.png" alt="facebook"></a>
           </li>
         </ul>
       </div>
