--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
       <div class="container__menu">    <!-- MENU HERE -->
         <ul class="container__menu-list">
           <li class="container__menu-item menu__item_black">
+            
             <img src="img/menu/main-icon.png" alt="menu icon">
             <a href="#">ГЛАВНАЯ</a>
+           
           </li>
           <li class="container__menu-item">
             <img src="img/menu/feed-icon.png" alt="menu feed">
@@ -58,7 +60,7 @@
             </div>
             <div class="features__text">
               <p class="features__text-topic">УНИКАЛЬНОСТЬ</p>
-             <ul class="features__text-list">Создан для вашего комфортного отдыха
+             <ul class="features__text-list"><span>Создан для вашего комфортного отдыха</span>
                 <li>Кофе/чай</li>
                 <li>Шкаф (5кг)</li>
                 <li>Рабочее место</li>
@@ -71,7 +73,7 @@
             </div>
             <div class="features__text">
               <p class="features__text-topic">ПРЕМИУМ-КЛАСС</p>
-             <ul class="features__text-list">Для любителей хорших впечатлений
+             <ul class="features__text-list"><span>Для любителей хорших впечатлений</span>
                 <li>Обед+кофе</li>
                 <li>Шкаф(10кг)</li>
                 <li>Детское кресло</li>
@@ -84,7 +86,7 @@
             </div>
             <div class="features__text">
               <p class="features__text-topic">ЛАКШЕРИ-СТУЛЬЯ</p>
-             <ul class="features__text-list">Всё самое лучшее и незабываемое
+             <ul class="features__text-list"><span>Всё самое лучшее и незабываемое</span>
                 <li>Джакузи</li>
                 <li>Шкаф (15кг)</li>
                 <li>Табуретка</li>
