--- a/index.html
+++ b/index.html
@@ -34,19 +34,23 @@
     <div class="container">
       <div class="container__menu">    <!-- MENU HERE -->
         <ul class="container__menu-list">
-          <li class="container__menu-item menu__item_black">
-            
-            <img src="img/menu/main-icon.png" alt="menu icon">
-            <a href="#">ГЛАВНАЯ</a>
-           
+          <li class="container__menu-item">
+              <a href="#">
+                <img src="img/menu/main-icon.png" alt="menu icon">
+                ГЛАВНАЯ
+              </a>
           </li>
           <li class="container__menu-item">
-            <img src="img/menu/feed-icon.png" alt="menu feed">
-            <a href="#">ОТЗЫВЫ</a>
+                <a href="#">
+                  <img src="img/menu/feed-icon.png" alt="menu feed">
+                  ОТЗЫВЫ
+                </a>
           </li>
           <li class="container__menu-item">
-            <img src="img/menu/wallet-icon.png" alt="menu wallet">
-            <a href="#">ТАРИФЫ</a>
+              <a href="#">
+                  <img src="img/menu/wallet-icon.png" alt="menu wallet">
+                  ТАРИФЫ
+              </a>
           </li>
         </ul>
       </div>
