--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <div class="container__menu">    <!-- MENU HERE -->
         <ul class="container__menu-list">
           <li class="container__menu-item">
-              <a href="#">
+              <a href="index.html">
                 <img src="img/menu/main-icon.png" alt="menu icon">
                 ГЛАВНАЯ
               </a>
           </li>
           <li class="container__menu-item">
-                <a href="#">
+                <a href="reviews.html">
                   <img src="img/menu/feed-icon.png" alt="menu feed">
                   ОТЗЫВЫ
                 </a>
