--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="header">
       <div class="header__top">
         <div class="header__top-logo">
-          <img src="img/logo-fig.png" alt="">
+          <img src="img/logo-fig.png" alt="логотип компании">
         </div>
         <div class="header__top-info">
           <a href="#" class="number">8(800)00-392-10</a>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="header__main-pic">
-        <img src="img/banner.png" alt="">
+        <img src="img/banner.png" alt="главный баннер">
       </div>
     </div>
               <!-- CONTAINER -->
@@ -36,20 +36,20 @@
         <ul class="container__menu-list">
           <li class="container__menu-item">
               <a href="index.html">
-                <img src="img/menu/main-icon.png" alt="menu icon">
-                ГЛАВНАЯ
+                <img src="img/menu/main-icon.png" alt="главная лого">
+                главная
               </a>
           </li>
           <li class="container__menu-item">
                 <a href="reviews.html">
-                  <img src="img/menu/feed-icon.png" alt="menu feed">
-                  ОТЗЫВЫ
+                  <img src="img/menu/feed-icon.png" alt="отзывы лого">
+                  отзывы
                 </a>
           </li>
           <li class="container__menu-item">
               <a href="#">
-                  <img src="img/menu/wallet-icon.png" alt="menu wallet">
-                  ТАРИФЫ
+                  <img src="img/menu/wallet-icon.png" alt="тарифы лого">
+                  тарифы
               </a>
           </li>
         </ul>
@@ -60,10 +60,10 @@
         <ul class="features">
           <li class="features__item"> <!-- FIRST ITEM -->
             <div class="features__pic">
-              <img src="img/features/flower.png" alt="">
+              <img src="img/features/flower.png" alt="цветок лого">
             </div>
             <div class="features__text">
-              <p class="features__text-topic">УНИКАЛЬНОСТЬ</p>
+              <p class="features__text-topic">уникальность</p>
              <ul class="features__text-list"><span>Создан для вашего комфортного отдыха</span>
                 <li>Кофе/чай</li>
                 <li>Шкаф (5кг)</li>
@@ -73,10 +73,10 @@
           </li>
           <li class="features__item"><!--  SECOND ITEM -->
             <div class="features__pic">
-              <img src="img/features/mark-as-favorite-star.png" alt="">
+              <img src="img/features/mark-as-favorite-star.png" alt="звезда лого">
             </div>
             <div class="features__text">
-              <p class="features__text-topic">ПРЕМИУМ-КЛАСС</p>
+              <p class="features__text-topic">премиум-класс</p>
              <ul class="features__text-list"><span>Для любителей хорших впечатлений</span>
                 <li>Обед+кофе</li>
                 <li>Шкаф(10кг)</li>
@@ -86,10 +86,10 @@
           </li>
           <li class="features__item"> <!-- THIRD ITEM -->
             <div class="features__pic">
-              <img src="img/features/painter-palette.png" alt="">
+              <img src="img/features/painter-palette.png" alt="паллет лого">
             </div>
             <div class="features__text">
-              <p class="features__text-topic">ЛАКШЕРИ-СТУЛЬЯ</p>
+              <p class="features__text-topic">лакшери-стулья</p>
              <ul class="features__text-list"><span>Всё самое лучшее и незабываемое</span>
                 <li>Джакузи</li>
                 <li>Шкаф (15кг)</li>
@@ -105,7 +105,7 @@
         <ul class="news__list"> <!-- FIRST ITEM -->
           <li class="news__item">
             <div class="news__img">
-              <img src="img/news_pic/layer-6.png" alt="">
+              <img src="img/news_pic/layer-6.png" alt="черная дыра">
             </div>
             <div class="news__content">
               <div>12.10.2016</div>
@@ -117,7 +117,7 @@
           </li>
           <li class="news__item"> <!-- SECOND ITEM -->
             <div class="news__img">
-              <img src="img/news_pic/layer-7.png" alt="">
+              <img src="img/news_pic/layer-7.png" alt="фаер">
             </div>
             <div class="news__content">
               <div>01.02.2016</div>
@@ -129,7 +129,7 @@
           </li>
           <li class="news__item"> <!-- THIRD ITEM -->
             <div class="news__img">
-              <img src="img/news_pic/layer-9.png" alt="">
+              <img src="img/news_pic/layer-9.png" alt="рабочее место">
             </div>
             <div class="news__content">
               <div>22.12.2015</div>
@@ -144,7 +144,7 @@
       <div class="container__pages"> <!--CHOOSE PAGES -->
         <ul class="container__pages-list">
           <li class="container__page">Страница 1 из 7</li>
-          <li class="container__page"><a href="#"><img src="img/left-arrow-light.png" alt=""></a></li>
+          <li class="container__page"><a href="#"><img src="img/left-arrow-light.png" alt="стрелка влево"></a></li>
           <li class="container__page-num"><a href="#">1</a></li>
           <li class="container__page-num"><a href="#">2</a></li>
           <li class="container__page-num"><a href="#">3</a></li>
@@ -152,7 +152,7 @@
           <li class="container__page-num"><a href="#">5</a></li>
           <li class="container__page-num"><a href="#">6</a></li>
           <li class="container__page-num"><a href="#">7</a></li>
-          <li class="container__page"><a href=""><img src="img/right-arrow.png" alt=""></a></li>
+          <li class="container__page"><a href=""><img src="img/right-arrow.png" alt="стрелка вправо"></a></li>
         </ul>
       </div>
     </div>
@@ -162,25 +162,25 @@
         <p>Сделано с любовью и старанием на курсе «HTML + CSS» в <b>LoftSchool.</b> Автор работы: <b>Казаков Роман</b></p>
       </div>
       <div class="footer__logo">
-        <img src="img/logo-fig.png" alt="">
+        <img src="img/logo-fig.png" alt="логотип компании">
       </div>
       <div class="footer__social">
         <p>Наши социальные сети</p>
         <ul>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/vk.png" alt="vk"></a>
+            <a href="#"><img src="img/social/vk.png" alt="вконтакте"></a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/fb.png" alt="facebook"></a>
+            <a href="#"><img src="img/social/fb.png" alt="фейсбук"></a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/google.png" alt="google"></a>
+            <a href="#"><img src="img/social/google.png" alt="гугл"></a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/twitter.png" alt="twitter"></a>
+            <a href="#"><img src="img/social/twitter.png" alt="твиттер"></a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/mail.png" alt="facebook"></a>
+            <a href="#"><img src="img/social/mail.png" alt="почта"></a>
           </li>
         </ul>
       </div>
