--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./fonts/stylesheet.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <!-- <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png"> -->
   <title>Coworking</title>
@@ -15,7 +15,7 @@
 
 <body>
   <div class="wrapper">
-              <!-- HEADER -->
+    <!-- HEADER -->
     <div class="header">
       <div class="header__top">
         <div class="header__top-logo">
@@ -30,79 +30,85 @@
         <img src="img/banner.png" alt="главный баннер">
       </div>
     </div>
-              <!-- CONTAINER -->
+    <!-- CONTAINER -->
     <div class="container">
-      <div class="container__menu">    <!-- MENU HERE -->
+      <div class="container__menu">
+        <!-- MENU HERE -->
         <ul class="container__menu-list">
           <li class="container__menu-item">
-              <a href="index.html">
-                <img src="img/menu/main-icon.png" alt="главная лого">
-                главная
-              </a>
+            <a href="index.html">
+              <img src="img/menu/main-icon.png" alt="главная лого"> главная
+            </a>
           </li>
           <li class="container__menu-item">
-                <a href="reviews.html">
-                  <img src="img/menu/feed-icon.png" alt="отзывы лого">
-                  отзывы
-                </a>
+            <a href="reviews.html">
+              <img src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
+            </a>
           </li>
           <li class="container__menu-item">
-              <a href="#">
-                  <img src="img/menu/wallet-icon.png" alt="тарифы лого">
-                  тарифы
-              </a>
+            <a href="#">
+              <img src="img/menu/wallet-icon.png" alt="тарифы лого"> тарифы
+            </a>
           </li>
         </ul>
       </div>
 
-      <div class="container__features"> <!-- FEATURES -->
+      <div class="container__features">
+        <!-- FEATURES -->
         <h1>Особенности</h1>
         <ul class="features">
-          <li class="features__item"> <!-- FIRST ITEM -->
+          <li class="features__item">
+            <!-- FIRST ITEM -->
             <div class="features__pic">
               <img src="img/features/flower.png" alt="цветок лого">
             </div>
             <div class="features__text">
               <p class="features__text-topic">уникальность</p>
-             <ul class="features__text-list"><span>Создан для вашего комфортного отдыха</span>
+              <ul class="features__text-list">
+                <span>Создан для вашего комфортного отдыха</span>
                 <li>Кофе/чай</li>
                 <li>Шкаф (5кг)</li>
                 <li>Рабочее место</li>
               </ul>
             </div>
           </li>
-          <li class="features__item"><!--  SECOND ITEM -->
+          <li class="features__item">
+            <!--  SECOND ITEM -->
             <div class="features__pic">
               <img src="img/features/mark-as-favorite-star.png" alt="звезда лого">
             </div>
             <div class="features__text">
               <p class="features__text-topic">премиум-класс</p>
-             <ul class="features__text-list"><span>Для любителей хорших впечатлений</span>
+              <ul class="features__text-list">
+                <span>Для любителей хорших впечатлений</span>
                 <li>Обед+кофе</li>
                 <li>Шкаф(10кг)</li>
                 <li>Детское кресло</li>
               </ul>
             </div>
           </li>
-          <li class="features__item"> <!-- THIRD ITEM -->
+          <li class="features__item">
+            <!-- THIRD ITEM -->
             <div class="features__pic">
               <img src="img/features/painter-palette.png" alt="паллет лого">
             </div>
             <div class="features__text">
               <p class="features__text-topic">лакшери-стулья</p>
-             <ul class="features__text-list"><span>Всё самое лучшее и незабываемое</span>
+              <ul class="features__text-list">
+                <span>Всё самое лучшее и незабываемое</span>
                 <li>Джакузи</li>
                 <li>Шкаф (15кг)</li>
                 <li>Табуретка</li>
               </ul>
             </div>
           </li>
-               <!-- NEWS BLOCK -->
+          <!-- NEWS BLOCK -->
         </ul>
       </div>
       <div class="container__news">
         <h1>Последние новости</h1>
-        <ul class="news__list"> <!-- FIRST ITEM -->
+        <ul class="news__list">
+          <!-- FIRST ITEM -->
           <li class="news__item">
             <div class="news__img">
               <img src="img/news_pic/layer-6.png" alt="черная дыра">
@@ -115,7 +121,8 @@
                 24/7. Используйте шкаф для хранения личных вещей. </p>
             </div>
           </li>
-          <li class="news__item"> <!-- SECOND ITEM -->
+          <li class="news__item">
+            <!-- SECOND ITEM -->
             <div class="news__img">
               <img src="img/news_pic/layer-7.png" alt="фаер">
             </div>
@@ -127,7 +134,8 @@
                 менторами для резидентов. </p>
             </div>
           </li>
-          <li class="news__item"> <!-- THIRD ITEM -->
+          <li class="news__item">
+            <!-- THIRD ITEM -->
             <div class="news__img">
               <img src="img/news_pic/layer-9.png" alt="рабочее место">
             </div>
@@ -141,25 +149,51 @@
           </li>
         </ul>
       </div>
-      <div class="container__pages"> <!--CHOOSE PAGES -->
+      <div class="container__pages">
+        <!--CHOOSE PAGES -->
         <ul class="container__pages-list">
           <li class="container__page">Страница 1 из 7</li>
-          <li class="container__page"><a href="#"><img src="img/left-arrow-light.png" alt="стрелка влево"></a></li>
-          <li class="container__page-num"><a href="#">1</a></li>
-          <li class="container__page-num"><a href="#">2</a></li>
-          <li class="container__page-num"><a href="#">3</a></li>
-          <li class="container__page-num"><a href="#">4</a></li>
-          <li class="container__page-num"><a href="#">5</a></li>
-          <li class="container__page-num"><a href="#">6</a></li>
-          <li class="container__page-num"><a href="#">7</a></li>
-          <li class="container__page"><a href=""><img src="img/right-arrow.png" alt="стрелка вправо"></a></li>
+          <li class="container__page">
+            <a href="#">
+              <img src="img/left-arrow-light.png" alt="стрелка влево">
+            </a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">1</a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">2</a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">3</a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">4</a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">5</a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">6</a>
+          </li>
+          <li class="container__page-num">
+            <a href="#">7</a>
+          </li>
+          <li class="container__page">
+            <a href="">
+              <img src="img/right-arrow.png" alt="стрелка вправо">
+            </a>
+          </li>
         </ul>
       </div>
     </div>
-                      <!-- FOOTER -->
+    <!-- FOOTER -->
     <div class="footer">
       <div class="footer__text">
-        <p>Сделано с любовью и старанием на курсе «HTML + CSS» в <b>LoftSchool.</b> Автор работы: <b>Казаков Роман</b></p>
+        <p>Сделано с любовью и старанием на курсе «HTML + CSS» в
+          <b>LoftSchool.</b> Автор работы:
+          <b>Казаков Роман</b>
+        </p>
       </div>
       <div class="footer__logo">
         <img src="img/logo-fig.png" alt="логотип компании">
@@ -168,19 +202,29 @@
         <p>Наши социальные сети</p>
         <ul>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/vk.png" alt="вконтакте"></a>
+            <a href="#">
+              <img src="img/social/vk.png" alt="вконтакте">
+            </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/fb.png" alt="фейсбук"></a>
+            <a href="#">
+              <img src="img/social/fb.png" alt="фейсбук">
+            </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/google.png" alt="гугл"></a>
+            <a href="#">
+              <img src="img/social/google.png" alt="гугл">
+            </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/twitter.png" alt="твиттер"></a>
+            <a href="#">
+              <img src="img/social/twitter.png" alt="твиттер">
+            </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#"><img src="img/social/mail.png" alt="почта"></a>
+            <a href="#">
+              <img src="img/social/mail.png" alt="почта">
+            </a>
           </li>
         </ul>
       </div>
