--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="features__text">
               <p class="features__text-topic">уникальность</p>
               <ul class="features__text-list">
-                <span>Создан для вашего комфортного отдыха</span>
+                Создан для вашего комфортного отдыха
                 <li>Кофе/чай</li>
                 <li>Шкаф (5кг)</li>
                 <li>Рабочее место</li>
@@ -80,7 +80,7 @@
             <div class="features__text">
               <p class="features__text-topic">премиум-класс</p>
               <ul class="features__text-list">
-                <span>Для любителей хорших впечатлений</span>
+                Для любителей хорших впечатлений
                 <li>Обед+кофе</li>
                 <li>Шкаф(10кг)</li>
                 <li>Детское кресло</li>
@@ -95,7 +95,7 @@
             <div class="features__text">
               <p class="features__text-topic">лакшери-стулья</p>
               <ul class="features__text-list">
-                <span>Всё самое лучшее и незабываемое</span>
+                Всё самое лучшее и незабываемое
                 <li>Джакузи</li>
                 <li>Шкаф (15кг)</li>
                 <li>Табуретка</li>
