--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="container__news">
           <h1>Последние новости</h1>
-          <ul class="news__list">
+          <ul class="news__list clearfix">
             <!-- FIRST ITEM -->
             <li class="news__item">
               <div class="news__img">
