--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-  <div class="wrapper">
+<div class="wrapper">
     <!-- HEADER -->
-    <div class="header">
+    <header class="header">
 
       <div class="header__top">
         <div class="contain clearfix">
@@ -40,13 +40,13 @@
           <img src="img/banner.png" alt="главный баннер">
         </div>
       </div>
-    </div>
-  </div>
+    </header>
+  
   <!-- CONTAINER -->
-  <div class="main__container clearfix">
+  <main class="main__container clearfix">
     <!-- ALL CONTENT HERE -->
     <div class="contain">
-      <div class="container__menu clearfix">
+      <aside class="container__menu clearfix">
         <!-- MENU HERE -->
         <ul class="container__menu-list">
           <li class="container__menu-item">
@@ -65,9 +65,9 @@
             </a>
           </li>
         </ul>
-      </div>
+      </aside>
       <div class="container__allcontent clearfix">
-        <div class="container__features clearfix">
+        <section class="container__features clearfix">
           <!-- FEATURES -->
           <h1>Особенности</h1>
           <ul class="features">
@@ -77,12 +77,12 @@
                 <img src="img/features/flower.png" alt="цветок лого">
               </div>
               <div class="features__text">
-                <p class="features__text-topic">уникальность</p>
+                <span class="features__text-topic">Уникальность</span>
+                <p class="features__text-topic2"> Создан для вашего комфортного отдыха</p>
                 <ul class="features__text-list">
-                  Создан для вашего комфортного отдыха
-                  <li>Кофе/чай</li>
-                  <li>Шкаф (5кг)</li>
-                  <li>Рабочее место</li>
+                  <li сlass="features__text-item">Кофе/чай</li>
+                  <li сlass="features__text-item">Шкаф (5кг)</li>
+                  <li сlass="features__text-item">Рабочее место</li>
                 </ul>
               </div>
             </li>
@@ -92,12 +92,12 @@
                 <img src="img/features/mark-as-favorite-star.png" alt="звезда лого">
               </div>
               <div class="features__text">
-                <p class="features__text-topic">премиум-класс</p>
+                <span class="features__text-topic">Премиум-класс</span>
+                <p class="features__text-topic2">Для любителей хороших впечатлений</p>
                 <ul class="features__text-list">
-                  Для любителей хорших впечатлений
-                  <li>Обед+кофе</li>
-                  <li>Шкаф(10кг)</li>
-                  <li>Детское кресло</li>
+                  <li сlass="features__text-item">Обед+кофе</li>
+                  <li сlass="features__text-item">Шкаф (10кг)</li>
+                  <li сlass="features__text-item">Детское кресло</li>
                 </ul>
               </div>
             </li>
@@ -107,19 +107,19 @@
                 <img src="img/features/painter-palette.png" alt="паллет лого">
               </div>
               <div class="features__text">
-                <p class="features__text-topic">лакшери-стулья</p>
+                <span class="features__text-topic">Лакшери-стулья</span>
+                <p class="features__text-topic2">Всё самое лучшее <br> и не забываемое</p>
                 <ul class="features__text-list">
-                  Всё самое лучшее и незабываемое
-                  <li>Джакузи</li>
-                  <li>Шкаф (15кг)</li>
-                  <li>Табуретка</li>
+                  <li сlass="features__text-item">Джакузи</li>
+                  <li сlass="features__text-item">Шкаф (15кг)</li>
+                  <li сlass="features__text-item">Табуретка</li>
                 </ul>
               </div>
             </li>
             <!-- NEWS BLOCK -->
           </ul>
-        </div>
-        <div class="container__news">
+        </section>
+        <section class="container__news">
           <h1>Последние новости</h1>
           <ul class="news__list">
             <!-- FIRST ITEM -->
@@ -162,7 +162,7 @@
               </div>
             </li>
           </ul>
-        </div>
+        </section>
         <div class="container__pages">
           <!--CHOOSE PAGES -->
           <ul class="container__pages-list">
@@ -202,10 +202,10 @@
         </div>
       </div>
     </div>
-  </div>
-  <!-- MAIN CONTAINER END -->
+  </main>
+ 
   <!-- FOOTER -->
-  <div class="footer clearfix">
+  <footer class="footer clearfix">
     <div class="contain">
       <div class="footer__text">
         <p>Сделано с любовью и старанием на курсе «HTML + CSS» в
@@ -247,9 +247,10 @@
         </ul>
       </div>
     </div>
-  </div>
+  </footer>
 
-  </div>
+</div>
+
 </body>
 
 </html>
