--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img src="img/news_pic/layer-6.png" alt="черная дыра">
               </div>
               <div class="news__content">
-                <div>12.10.2016</div>
+                <div class="news__content-date">12.10.2016</div>
                 <span>Черная дыра скидок</span>
                 <p>Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах
                   от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате
@@ -141,7 +141,7 @@
                 <img src="img/news_pic/layer-7.png" alt="фаер">
               </div>
               <div class="news__content">
-                <div>01.02.2016</div>
+                <div class="news__content-date">01.02.2016</div>
                 <span>Заражай друзей, получай призы!</span>
                 <p>Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить
                   на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами
@@ -154,7 +154,7 @@
                 <img src="img/news_pic/layer-9.png" alt="рабочее место">
               </div>
               <div class="news__content">
-                <div>22.12.2015</div>
+                <div class="news__content-date">22.12.2015</div>
                 <span>Новое рабочее место для бизнесменов.</span>
                 <p>Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную
                   зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой,
