--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <!-- FIRST ITEM -->
             <li class="news__item">
               <div class="news__img">
-                <img src="img/news_pic/layer-6.png" alt="черная дыра">
+                <img class="news__img-item" src="img/news_pic/blackhole.png" alt="черная дыра">
               </div>
               <div class="news__content">
                 <div class="news__content-date">12.10.2016</div>
@@ -134,11 +134,12 @@
                   от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате
                   24/7. Используйте шкаф для хранения личных вещей.</p>
               </div>
+              <hr class="news__item-separate">
             </li>
             <li class="news__item">
               <!-- SECOND ITEM -->
               <div class="news__img">
-                <img src="img/news_pic/layer-7.png" alt="фаер">
+                <img class="news__img-item" src="img/news_pic/fire.png" alt="фаер">
               </div>
               <div class="news__content">
                 <div class="news__content-date">01.02.2016</div>
@@ -147,11 +148,12 @@
                   на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами
                   или менторами для резидентов. </p>
               </div>
+              <hr class="news__item-separate">
             </li>
             <li class="news__item">
               <!-- THIRD ITEM -->
               <div class="news__img">
-                <img src="img/news_pic/layer-9.png" alt="рабочее место">
+                <img class="news__img-item" src="img/news_pic/notebook.jpg" alt="рабочее место">
               </div>
               <div class="news__content">
                 <div class="news__content-date">22.12.2015</div>
@@ -160,6 +162,7 @@
                   зону и зону релакса.Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой,
                   чайником, кофе машиной, посудой.</p>
               </div>
+              <hr class="news__item-separate">
             </li>
           </ul>
         </section>
@@ -203,9 +206,10 @@
       </div>
     </div>
   </main>
- 
+</div> <!-- END WRAPPER -->
+
   <!-- FOOTER -->
-  <footer class="footer clearfix">
+<footer class="footer clearfix">
     <div class="contain">
       <div class="footer__text">
         <p class="footer__text-made-by">Сделано с любовью и старанием<br> на курсе «HTML + CSS» в
@@ -247,9 +251,9 @@
         </ul>
       </div>
     </div>
-  </footer>
+</footer>
 
-</div>
+
 
 </body>
 
