--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="./fonts/stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
   <!-- <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png"> -->
   <title>Coworking</title>
 </head>
@@ -23,7 +22,7 @@
         <div class="contain clearfix">
 
           <div class="header__top-item--left">
-            <img src="img/logo-fig.png" alt="логотип компании">
+            <img class="header__top-item-logo" src="img/logo-fig.png" alt="логотип компании">
           </div>
 
           <div class="header__top-item--right">
@@ -50,18 +49,18 @@
         <!-- MENU HERE -->
         <ul class="container__menu-list">
           <li class="container__menu-item">
-            <a href="index.html">
-              <img src="img/menu/main-icon.png" alt="главная  лого"> главная
+            <a class="container__menu-item-link" href="index.html">
+              <img class="container__menu-item-pic" src="img/menu/main-icon.png" alt="главная  лого"> главная
             </a>
           </li>
           <li class="container__menu-item">
-            <a href="reviews.html">
-              <img src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
+            <a class="container__menu-item-link" href="reviews.html">
+              <img class="container__menu-item-pic" src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
             </a>
           </li>
           <li class="container__menu-item">
-            <a href="#">
-              <img src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
+            <a class="container__menu-item-link" href="#">
+              <img class="container__menu-item-pic" src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
             </a>
           </li>
         </ul>
@@ -69,12 +68,12 @@
       <div class="container__allcontent clearfix">
         <section class="container__features clearfix">
           <!-- FEATURES -->
-          <h1>Особенности</h1>
+          <h1 class="container__features-heading">Особенности</h1>
           <ul class="features">
             <li class="features__item">
               <!-- FIRST ITEM -->
               <div class="features__pic">
-                <img src="img/features/flower.png" alt="цветок лого">
+                <img class="features__pic-item" src="img/features/flower.png" alt="цветок лого">
               </div>
               <div class="features__text">
                 <span class="features__text-topic">Уникальность</span>
@@ -89,7 +88,7 @@
             <li class="features__item">
               <!--  SECOND ITEM -->
               <div class="features__pic">
-                <img src="img/features/mark-as-favorite-star.png" alt="звезда лого">
+                <img class="features__pic-item" src="img/features/mark-as-favorite-star.png" alt="звезда лого">
               </div>
               <div class="features__text">
                 <span class="features__text-topic">Премиум-класс</span>
@@ -104,7 +103,7 @@
             <li class="features__item">
               <!-- THIRD ITEM -->
               <div class="features__pic">
-                <img src="img/features/painter-palette.png" alt="паллет лого">
+                <img class="features__pic-item" src="img/features/painter-palette.png" alt="паллет лого">
               </div>
               <div class="features__text">
                 <span class="features__text-topic">Лакшери-стулья</span>
