--- a/reviews.html
+++ b/reviews.html
@@ -9,8 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 	<link rel="stylesheet" href="reviews-style.css">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="./css/main.css">
 	<!-- <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png"> -->
 	<title>Coworking/reviews</title>
 </head>
