--- a/reviews.html
+++ b/reviews.html
@@ -22,12 +22,14 @@
 				<div class="contain clearfix">
 
 					<div class="header__top-item--left">
+						<a href="./index.html">
 						<img class="header__top-item-logo" src="img/logo-fig.png" alt="логотип компании">
+						</a>
 					</div>
 
 					<div class="header__top-item--right">
 						<div class="contacts">
-							<a href="#" class="number">8(800)00-392-10</a>
+							<a href="tel:+78000039210" class="number">8(800)00-392-10</a>
 							<a href="#" class="schedule_dropped">График работы</a>
 						</div>
 					</div>
@@ -61,7 +63,7 @@
 				</aside>
 
 				<section class="content clearfix">
-					<div class="content__breadcrumbs">Главная/Отзывы</div>
+					<div class="content__breadcrumbs"><i>Главная/Отзывы</i></div>
 					<div class="content__reviews">
 						<h1 class="content__reviews-heading">Отзывы</h1>
 						<ul class="content__reviews-list">
@@ -133,11 +135,11 @@
                 <img src="img/left-arrow-light.png" alt="стрелка влево">
               </a>
             </li>
-            <li class="container__page-num container__page--active">
+            <li class="container__page-num">
                 <a class="container__page-item" href="#">1</a>
             </li>
             <li class="container__page-num">
-              <a class="container__page-item" href="#">2</a>
+              <a class="container__page-item " href="#">2</a>
             </li>
             <li class="container__page-num">
               <a class="container__page-item" href="#">3</a>
@@ -192,7 +194,7 @@
 							<label><input type="radio" name="yes/no">Да</label>
 							<label><input type="radio" name="yes/no">Нет</label>
 						</div>
-						<button class="review-adding__button-submit">Отправить</button>
+						<button class="review-adding__button-submit" type="submit">Отправить</button>
 					</div>
 					
 				</form>
