--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
           <div class="header__top-item--right">
             <div class="contacts">
-              <a href="#" class="number">8(800)00-392-10</a>
+              <a href="tel:+78000039210" class="number">8(800)00-392-10</a>
               <a href="#" class="schedule_dropped">График работы</a>
             </div>
           </div>
@@ -170,7 +170,7 @@
                 <img src="img/left-arrow-light.png" alt="стрелка влево">
               </a>
             </li>
-            <li class="container__page-num container__page--active">
+            <li class="container__page-num">
                 <a class="container__page-item" href="#">1</a>
             </li>
             <li class="container__page-num">
