--- a/reviews.html
+++ b/reviews.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 	<link rel="stylesheet" href="reviews-style.css">
 	<link rel="stylesheet" href="./css/main.css">
-	<!-- <link rel="shorcut icon" href="https://cdn4.iconfinder.com/data/icons/business-use/74/80-32.png"> -->
+	<link rel="shorcut icon" href="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/computer-32.png">
 	<title>Coworking/reviews</title>
 </head>
 
