--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="shorcut icon" href="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/computer-32.png">
-  <title>Coworking</title>
+  <title>Коворкинг твоей мечты</title>
 </head>
 
 <body>
