--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="reviews-style.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="shorcut icon" href="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/computer-32.png">
-	<title>Coworking/reviews</title>
+	<title>Отзывы</title>
 </head>
 
 <body>
